# dirsync

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  init.rs  main.rs  remote.rs  watch.rs
src/remote/: cli.rs  install_to_remote.rs  mod.rs  receive_from_remote.rs  remote_exec.rs
