[package]
name = "dirsync"
version = "0.1.0"
authors = ["Spencer Kohan <spencerkohan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.12"
# clap = { git = "https://github.com/clap-rs/clap/" }
structopt = { version = "0.3" }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
ssh2 = "0.8"
ssh_config = "0.1.0"